Primera versión de como debería ser unos tests de ScheduleService